# telegram-opwebui

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  main.py  pyproject.toml  test_runner.py
.devcontainer/: devcontainer.json
.github/workflows/: ci-cd.yml
config/: .env.sample
docs/: project.md
tests/: test_env_loading.py  test_llm_processing.py  test_message_handlers.py
