[project]
name = "telebot-opwebui"
version = "0.1.0"
description = "A Telegram bot integrated with OpenWebUI for AI-powered conversations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytelegrambotapi>=4.28.0",
    "pytest-asyncio>=1.1.0",
    "python-dotenv>=1.1.1",
    "requests>=2.31.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.1",
    "requests-mock>=1.11.0",
]

[tool.setuptools]
packages = {find = {}}
package-dir = {"" = "."}
include-package-data = false

[tool.setuptools.package-data]
"*" = ["README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
